--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-django = "*"
+django = "==3.1.3"
 psycopg2 = "*"
 django-environ = "*"
 pillow = "*"
