Create the user and quest app

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-environ = "*"
 pillow = "*"
 markdownify = "*"
 django-crispy-forms = "*"
+django-extensions = "*"
 
 [requires]
 python_version = "3.8"
