--- a/Pipfile
+++ b/Pipfile
@@ -11,9 +11,9 @@ django = "==3.1.3"
 psycopg2 = "*"
 django-environ = "*"
 pillow = "*"
-markdownify = "*"
 django-crispy-forms = "*"
 django-extensions = "*"
+django-markdownify = "*"
 
 [requires]
 python_version = "3.8"
